--- a/AppOfThrones/Houses/HouseDetailViewController.xib
+++ b/AppOfThrones/Houses/HouseDetailViewController.xib
@@ -9,10 +9,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HouseDetailViewController">
             <connections>
-                <outlet property="sigil" destination="dX3-IV-WRq" id="lXZ-xE-iLT"/>
                 <outlet property="tableView" destination="oPl-Kx-PhM" id="aM0-0C-oRa"/>
                 <outlet property="view" destination="iN0-l3-epB" id="ikJ-mf-98z"/>
-                <outlet property="words" destination="IZd-kx-IBN" id="t9g-2Y-18K"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -21,64 +19,21 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="oPl-Kx-PhM">
-                    <rect key="frame" x="0.0" y="44" width="414" height="560"/>
+                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="560" id="Jpi-aD-y9y"/>
-                    </constraints>
                     <color key="sectionIndexBackgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="hTs-XH-fBG"/>
                         <outlet property="delegate" destination="-1" id="DN1-j6-rKi"/>
                     </connections>
                 </tableView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Seat" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vwb-fI-YHN">
-                    <rect key="frame" x="20" y="671" width="275.5" height="32"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="32" id="Cja-pF-oI0"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
-                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="A golden lion rampant on a crimson field" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dX3-IV-WRq">
-                    <rect key="frame" x="20" y="706" width="275.5" height="18"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                    <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Words" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Br-SO-ljX">
-                    <rect key="frame" x="20" y="759.5" width="275.5" height="21.5"/>
-                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
-                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="&quot;Hear Me Roar!&quot; (official)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IZd-kx-IBN">
-                    <rect key="frame" x="20" y="784" width="275.5" height="21"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="21" id="Zr5-wt-bXp"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                    <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <nil key="highlightedColor"/>
-                </label>
             </subviews>
             <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
             <constraints>
                 <constraint firstItem="oPl-Kx-PhM" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="3wg-O4-U8t"/>
-                <constraint firstAttribute="bottom" secondItem="IZd-kx-IBN" secondAttribute="bottom" constant="91" id="61H-yZ-Y6Q"/>
-                <constraint firstItem="dX3-IV-WRq" firstAttribute="top" secondItem="vwb-fI-YHN" secondAttribute="bottom" constant="3" id="75u-pW-EkR"/>
-                <constraint firstItem="IZd-kx-IBN" firstAttribute="leading" secondItem="1Br-SO-ljX" secondAttribute="leading" id="8d6-2Y-Yhf"/>
-                <constraint firstItem="IZd-kx-IBN" firstAttribute="leading" secondItem="dX3-IV-WRq" secondAttribute="leading" id="ACX-Ia-g0P"/>
-                <constraint firstItem="IZd-kx-IBN" firstAttribute="leading" secondItem="vwb-fI-YHN" secondAttribute="leading" id="CAf-nw-01c"/>
+                <constraint firstItem="oPl-Kx-PhM" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="5xI-Ei-SSm"/>
                 <constraint firstItem="oPl-Kx-PhM" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="VQE-G9-7Yp"/>
-                <constraint firstItem="IZd-kx-IBN" firstAttribute="trailing" secondItem="vwb-fI-YHN" secondAttribute="trailing" id="a6d-41-HSs"/>
-                <constraint firstItem="vwb-fI-YHN" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leadingMargin" id="ddx-16-uND"/>
-                <constraint firstItem="IZd-kx-IBN" firstAttribute="trailing" secondItem="dX3-IV-WRq" secondAttribute="trailing" id="gk0-Sx-vTb"/>
                 <constraint firstItem="oPl-Kx-PhM" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="kSu-MJ-GVj"/>
-                <constraint firstItem="IZd-kx-IBN" firstAttribute="top" secondItem="1Br-SO-ljX" secondAttribute="bottom" constant="3" id="pHc-hT-GlZ"/>
-                <constraint firstItem="1Br-SO-ljX" firstAttribute="top" secondItem="dX3-IV-WRq" secondAttribute="bottom" constant="35.5" id="pkA-ng-dhf"/>
-                <constraint firstItem="IZd-kx-IBN" firstAttribute="trailing" secondItem="1Br-SO-ljX" secondAttribute="trailing" id="xPj-5P-kRa"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="131.8840579710145" y="153.34821428571428"/>
