--- a/AppOfThrones/Base.lproj/LaunchScreen.storyboard
+++ b/AppOfThrones/Base.lproj/LaunchScreen.storyboard
@@ -15,27 +15,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_1024" translatesAutoresizingMaskIntoConstraints="NO" id="tuM-gN-wD2">
-                                <rect key="frame" x="87" y="384" width="240" height="128"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="title" translatesAutoresizingMaskIntoConstraints="NO" id="tuM-gN-wD2">
+                                <rect key="frame" x="20" y="359" width="374" height="153"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="tuM-gN-wD2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="I1b-R3-Rjj"/>
-                            <constraint firstItem="tuM-gN-wD2" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="ckL-w7-lLL"/>
+                            <constraint firstItem="tuM-gN-wD2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="I1b-R3-Rjj"/>
+                            <constraint firstItem="tuM-gN-wD2" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="-12.5" id="ckL-w7-lLL"/>
                             <constraint firstItem="tuM-gN-wD2" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="dfS-q3-aUm"/>
-                            <constraint firstItem="tuM-gN-wD2" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="340" id="iM5-U9-mYG"/>
+                            <constraint firstItem="tuM-gN-wD2" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="315" id="iM5-U9-mYG"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
     <resources>
-        <image name="icon_1024" width="512" height="512"/>
+        <image name="title" width="606.5" height="244"/>
     </resources>
 </document>
