--- a/AppOfThrones/Episodes/DetailCells/EpisodeImageTableViewCell.xib
+++ b/AppOfThrones/Episodes/DetailCells/EpisodeImageTableViewCell.xib
@@ -9,33 +9,34 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HouseImageTableViewCell" rowHeight="374" id="KGk-i7-Jjw" customClass="HouseImageTableViewCell" customModule="AppOfThrones" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EpisodeImageTableViewCell" rowHeight="374" id="KGk-i7-Jjw" customClass="EpisodeImageTableViewCell" customModule="AppOfThrones" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="374" height="374"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="374" height="374"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="title" translatesAutoresizingMaskIntoConstraints="NO" id="nTn-Re-dwb">
-                        <rect key="frame" x="-0.5" y="-0.5" width="375" height="375"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="title" translatesAutoresizingMaskIntoConstraints="NO" id="qES-va-mmh">
+                        <rect key="frame" x="-1" y="0.0" width="375" height="375"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="375" id="WHG-Cs-Pgi"/>
-                            <constraint firstAttribute="height" constant="375" id="yj3-KM-zcJ"/>
+                            <constraint firstAttribute="width" constant="375" id="aGA-CX-gWR"/>
+                            <constraint firstAttribute="height" constant="375" id="wCi-oo-bsa"/>
                         </constraints>
                     </imageView>
                 </subviews>
-                <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                 <constraints>
-                    <constraint firstItem="nTn-Re-dwb" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="Hwm-Pl-Ej3"/>
-                    <constraint firstItem="nTn-Re-dwb" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="IEr-HC-dU7"/>
+                    <constraint firstAttribute="bottom" secondItem="qES-va-mmh" secondAttribute="bottom" constant="-1" id="33f-9Y-nru"/>
+                    <constraint firstItem="qES-va-mmh" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Ks7-u5-hxI"/>
+                    <constraint firstAttribute="trailing" secondItem="qES-va-mmh" secondAttribute="trailing" id="hsK-HP-PjD"/>
+                    <constraint firstItem="qES-va-mmh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="-1" id="uSU-ZD-hIi"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="avatar" destination="nTn-Re-dwb" id="QOq-CA-wf9"/>
+                <outlet property="episodeImage" destination="qES-va-mmh" id="Aig-nu-nsP"/>
             </connections>
-            <point key="canvasLocation" x="-224.63768115942031" y="3.3482142857142856"/>
+            <point key="canvasLocation" x="102.89855072463769" y="24.776785714285712"/>
         </tableViewCell>
     </objects>
     <resources>
