--- a/AppOfThrones/Houses/DetailCells/HouseSeatTableViewCell.xib
+++ b/AppOfThrones/Houses/DetailCells/HouseSeatTableViewCell.xib
@@ -16,8 +16,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="House Seat" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KBq-FP-9kS">
-                        <rect key="frame" x="68" y="12" width="88.5" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select a House in the List" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KBq-FP-9kS">
+                        <rect key="frame" x="68" y="12" width="194" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="IKz-Y4-Jji"/>
                         </constraints>
