--- a/AppOfThrones/Houses/DetailCells/HouseWordsTableViewCell.xib
+++ b/AppOfThrones/Houses/DetailCells/HouseWordsTableViewCell.xib
@@ -16,8 +16,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="House Words" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="okg-c9-leR">
-                        <rect key="frame" x="101" y="12" width="103" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select a House in the List" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="okg-c9-leR">
+                        <rect key="frame" x="101" y="11.5" width="194" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="lTA-l7-oIW"/>
                         </constraints>
@@ -26,16 +26,18 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Words" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kSZ-Eg-AI9">
-                        <rect key="frame" x="16" y="11.5" width="53.5" height="21.5"/>
+                        <rect key="frame" x="16" y="11" width="53.5" height="21.5"/>
                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="okg-c9-leR" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="5CY-W7-4yW"/>
                     <constraint firstItem="okg-c9-leR" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="101" id="HHJ-pG-CLI"/>
                     <constraint firstItem="kSZ-Eg-AI9" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Tnd-Ik-Uja"/>
                     <constraint firstItem="kSZ-Eg-AI9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="WVq-VF-zhM"/>
+                    <constraint firstItem="kSZ-Eg-AI9" firstAttribute="baseline" secondItem="okg-c9-leR" secondAttribute="baseline" id="aRa-5S-hpy"/>
                     <constraint firstAttribute="bottom" secondItem="okg-c9-leR" secondAttribute="bottom" constant="11" id="pOb-Qx-UGB"/>
                 </constraints>
             </tableViewCellContentView>
