--- a/AppOfThrones/Favorites/FavoritesViewController.xib
+++ b/AppOfThrones/Favorites/FavoritesViewController.xib
@@ -27,7 +27,7 @@
                     </connections>
                 </tableView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
             <constraints>
                 <constraint firstItem="VwN-oY-Clo" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="6Pn-4t-NW7"/>
                 <constraint firstItem="VwN-oY-Clo" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="FeP-yc-6oX"/>
