--- a/AppOfThrones/DetailCells/ImageTableViewCell.xib
+++ b/AppOfThrones/DetailCells/ImageTableViewCell.xib
@@ -16,7 +16,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="375" height="375"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="VW6-we-1yn">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="title" translatesAutoresizingMaskIntoConstraints="NO" id="VW6-we-1yn">
                         <rect key="frame" x="20" y="11" width="335" height="353"/>
                     </imageView>
                 </subviews>
@@ -35,4 +35,7 @@
             <point key="canvasLocation" x="137.68115942028987" y="234.04017857142856"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="title" width="606.5" height="244"/>
+    </resources>
 </document>
